# fulcra-context-mcp

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  flake.nix  glama.json  main.py  pyproject.toml
fulcra_mcp/: main.py
tests/: test_tool_input_schemas.py
