[project]
name = "mcp-server-python"
version = "0.1.0"
description = "Fulcra Context MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastmcp>=2.6.1",
    "fulcra-api>=0.1.24",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.2",
    "structlog>=25.4.0",
]


